apps/media/ombi/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: media
  labels:
    app: ombi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:v4.0.767-ls22
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3579
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: longhorn-pvc-ombi
