apps/media/ombi/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: media
spec:
  ports:
  - name: ombi
    targetPort: 3579
    port: 3579
  selector:
    app: ombi
