apps/media/ombi/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: ombi
  name: ombi
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: ombi.home-lab.io
    http:
      paths:
      - path:
        backend:
          serviceName: ombi
          servicePort: 3579
